
Copyright (c) 1998-2011 Paulo Moura.        All Rights Reserved.
Logtalk is free software.  You can redistribute it and/or modify
it under the terms of the "Artistic License 2.0" as published by 
The Perl Foundation. Consult the "LICENSE.txt" file for details.
================================================================


RELEASE NOTES
=============


2.43.2 - October ??, 2011

    Updated the Logtalk compiler to use the "modules" compiler flag when
    testing for Prolog module support, thus avoid compilation issues with
    back-end Prolog compilers that don't support a module system but still
    define (:)/2 as a built-in control construct or predicate.

    Corrected a bug when using op/3 directives with the create_protocol/3,
    create_object/4, and create_category/4 built-in predicates where the
    local operator declarations would be visible outside the new entities.


2.43.1 - September 12, 2011

    Changed the compiler to take into account the uses/2 directive when
    compiling calls to the database built-in methods. This change extends
    the semantics of the uses/2 directive and allows easier migration from
    plain Prolog applications to Logtalk.

    Added experimental support for using a predicate template as argument to
    the coinductive/1 directive. This template allows the specification of
    which arguments are meaningful for coinductive success. Based on similar
    functionality found on on Feliks Kluzniak's DRA meta-interpreter.

    Improved support for debugging coinductive predicates when using the
    Logtalk built-in debugger.

    Removed coinduction support for CxProlog. The current version of this
    compiler lacks a soft-cut built-in predicate or control construct, which
    is now required by the experimental coinduction implementation.

    Lifted a long-standing limitation that prevented the user definition of
    wrapper predicates for the bagof/3 and setof/3 built-in methods whenever